# mail-dayou-intro

./: .gitignore  README.md  intro.config.json  pyproject.toml  vault.json
.github/workflows/: deploy.yml
intro/text/: intro-zh.md
scripts/: build.sh  deploy-oss.sh  setup.sh
src/intro_builder/: build.py
